[gd_scene load_steps=4 format=3 uid="uid://ddhe600bdwthq"]

[ext_resource type="Script" path="res://prog_52a.gd" id="1_0mmdf"]
[ext_resource type="Theme" uid="uid://cv1o3wmjapddp" path="res://BigFont.tres" id="2_3lk5n"]

[sub_resource type="LabelSettings" id="LabelSettings_txetc"]
font_size = 40

[node name="Prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0mmdf")

[node name="lblLength" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 26.0
offset_right = 120.0
offset_bottom = 62.0
text = "Length:"
label_settings = SubResource("LabelSettings_txetc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="lblArea" type="Label" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 194.0
offset_right = 381.0
offset_bottom = 249.0
text = "Area:"
label_settings = SubResource("LabelSettings_txetc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="lblPerim" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 245.0
offset_right = 320.0
offset_bottom = 300.0
text = "Perimeter:"
label_settings = SubResource("LabelSettings_txetc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="lblWidth" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 82.0
offset_right = 163.0
offset_bottom = 137.0
text = "Width:"
label_settings = SubResource("LabelSettings_txetc")
horizontal_alignment = 2
vertical_alignment = 1

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 33.0
offset_right = 418.0
offset_bottom = 84.0

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 178.0
offset_top = 92.0
offset_right = 418.0
offset_bottom = 143.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 515.0
offset_right = 292.0
offset_bottom = 625.0
theme = ExtResource("2_3lk5n")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 431.0
offset_top = 515.0
offset_right = 691.0
offset_bottom = 625.0
theme = ExtResource("2_3lk5n")
text = "Clear"

[node name="btnClear2" type="Button" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 517.0
offset_right = 1116.0
offset_bottom = 627.0
theme = ExtResource("2_3lk5n")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnClear2" to="." method="_on_btn_clear_2_pressed"]
